--- a/src/NCompileBench/NCompileBench.csproj
+++ b/src/NCompileBench/NCompileBench.csproj
@@ -14,13 +14,15 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <MinVerTagPrefix>v</MinVerTagPrefix>
     <MinVerMinimumMajorMinor>1.0</MinVerMinimumMajorMinor>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="MinVer" Version="2.2.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.3.1" />
     <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
     <PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.12.1" />
+    <PackageReference Include="System.Management" Version="4.7.0" />
+    <PackageReference Include="NewtonSoft.Json" Version="12.0.3" />
   </ItemGroup>
   <ItemGroup>
     <None Update="CodeAnalysisReproWithAnalyzers.zip">
