--- a/src/NCompileBench/NCompileBench.csproj
+++ b/src/NCompileBench/NCompileBench.csproj
@@ -23,10 +23,17 @@
     <PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.12.1" />
     <PackageReference Include="System.Management" Version="4.7.0" />
     <PackageReference Include="NewtonSoft.Json" Version="12.0.3" />
+    <PackageReference Include="Weikio.EventFramework.EventCreator" Version="1.0.0-alpha.0.52" />
   </ItemGroup>
   <ItemGroup>
     <None Update="CodeAnalysisReproWithAnalyzers.zip">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="public.key">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NCompileBench.Shared\NCompileBench.Shared.csproj" />
   </ItemGroup>
 </Project>
