--- a/src/NCompileBench.BackEnd/appsettings.json
+++ b/src/NCompileBench.BackEnd/appsettings.json
@@ -2,7 +2,8 @@
   "AllowedHosts": "*",
   "Storage": {
     "ConnectionString": "",
-    "Container": "results"
+    "ResultsContainer": "results",
+    "MetaContainer": "meta"
   },
   "PrivateKey": ""
 }
