--- a/src/NCompileBench.BackEnd/NCompileBench.BackEnd.csproj
+++ b/src/NCompileBench.BackEnd/NCompileBench.BackEnd.csproj
@@ -5,14 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NCompileBench.Shared\NCompileBench.Shared.csproj"/>
+    <ProjectReference Include="..\NCompileBench.Shared\NCompileBench.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Weikio.EventFramework.AspNetCore" Version="1.0.0-alpha.0.54"/>
-    <PackageReference Include="NLog.Web.AspNetCore" Version="4.8.4"/>
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.6.0"/>
-    <PackageReference Include="Weikio.ApiFramework.AspNetCore.StarterKit" Version="1.0.0-alpha.0.66"/>
+    <PackageReference Include="Weikio.EventFramework.AspNetCore" Version="1.0.0-alpha.0.54" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.8.4" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.6.0" />
+    <PackageReference Include="Weikio.ApiFramework.AspNetCore.NSwag" Version="1.0.0-alpha.0.66" />
   </ItemGroup>
 
 </Project>
